--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,7 +46,7 @@ const alternates = Object.keys(languages).map(l => {
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" href={asset("logo.avif")} />
+		<link rel="icon" type="image/svg+xml" href={asset("favicon.svg")} />
 		<meta name="generator" content={Astro.generator} />
         
         <!-- Primary Meta Tags -->
